RESOLVED FIXED122745
Static assertions in WTF::adoptPtr should point to using adoptRef for ref-counted objects
https://bugs.webkit.org/show_bug.cgi?id=122745
Summary Static assertions in WTF::adoptPtr should point to using adoptRef for ref-cou...
Zan Dobersek
Reported 2013-10-14 02:25:24 PDT
Static assertions in WTF::adoptRef should point to using adoptRef for ref-counted objects
Attachments
Patch (1.77 KB, patch)
2013-10-14 02:32 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2013-10-14 02:32:06 PDT
Zan Dobersek
Comment 2 2013-10-14 08:45:02 PDT
Comment on attachment 214138 [details] Patch Clearing flags on attachment: 214138 Committed r157402: <http://trac.webkit.org/changeset/157402>
Zan Dobersek
Comment 3 2013-10-14 08:45:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.