Static assertions in WTF::adoptPtr should point to using adoptRef for ref-counted objects https://bugs.webkit.org/show_bug.cgi?id=122745

Reviewed by Anders Carlsson.

* wtf/PassOwnPtr.h:
(WTF::adoptPtr): When the object's type is convertible to the RefCountedBase or ThreadSafeRefCountedBase type,
the static assertion should note that adoptRef should be used instead.


Canonical link: https://commits.webkit.org/140871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157402 268f45cc-cd09-0410-ab3c-d52691b4dbfc